fixed double scroll of content - js

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,4 +1,4 @@
-a, i {
+a {
 	color: black;
 	text-decoration: none;
 	&:hover {
