--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,19 +40,13 @@ span.highlight {
 
 	margin: 0 auto;
 }
-
-// HEADER STYLES
-
 .home-sections {
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
-	p {
-		font-size: 16px;
-	}
+
 }
 
-// SECTION STYLES
 .section-content {
 	background: rgba(255, 255, 255, 0.9);
 	border-radius: 5px;
@@ -66,7 +60,7 @@ span.highlight {
 		text-transform: capitalize;
 		line-height: 28px;
 		letter-spacing: 1px;
-		font-weight: 400;
+		font-weight: 300;
 	}
 	span {
 		font-weight: 600;
@@ -77,8 +71,6 @@ span.highlight {
 }
 
 .section-content {
-	position: relative;
-	z-index: 25;
 	opacity: 0;
 	transition: all .3s ease;
 	&.show {
@@ -99,34 +91,28 @@ section.content, section {
 	text-transform: uppercase;
 	letter-spacing: 2px;
 
-	h1.home, h2, a {
-		font-size: 5rem;
+	h2, a {
+		font-size: 3rem;
 		color: black;
+		margin-bottom: -17px;
 		padding: 0;
 		line-height: 70px;
 		letter-spacing: 2px;
 	}
-	h2 {
-		margin-bottom: 6%;
-	}
-	h2, &a {
-		margin-bottom: 6%;
-	}
 	a {
 		position: absolute;
-		bottom: 6%;
+		bottom: 0;
 		left: 3%;
-		i.fa-angle-up {
-			font-size: 48%;
-			position: absolute;
-			top: 0;
-			right: -14%;
+		i.fa-angle-right {
+			margin-left: 15px;
+			font-size: 52px;
 		}
 	}
 }
 
 .section-container {
 	position: absolute;
+	bottom: 0;
 	left: 3%;
 	.title-info {
 
@@ -135,24 +121,23 @@ section.content, section {
 		}
 	}
 }
-// WORK SECTION
+
 .work-container {
 	display: flex;
 	justify-content: space-between;
+	margin-left: 1%;
+	margin-right: 1%;
 	font-size: 12px;
 	text-align: left;
 	font-weight: 300;
-	border: 1px solid #FFF000;
-	padding: 0 10px;
-
 	h1 {
-		font-size: 18px;
+		font-size: 13px;
 		background: $yellow;
 
 	}
 	p {
 		line-height: 20px;
-		paddig: 5px 0;
+		margin: 10px 0;
 
 
 	}
@@ -175,9 +160,7 @@ section.content, section {
 		display: flex;
 		justify-content: space-between;
 		flex-direction: row-reverse;
-
 		img {
-			width: 100%;
 
 		}
 	}
@@ -187,20 +170,10 @@ section.content, section {
 		flex-wrap: wrap;
 		width: 50%;
 		text-align: left;
-		padding: 1% 2%;
-
-		span.team {
-			font-weight: 300;
-			font-size: 12px;
-			text-transform: capitalize;
-		}
+		background-color: $yellow;
 	}
 	.image-container {
 		width: 50%;
-		img {
-			display: block;
-			width: 100%;
-		}
 	}
 }
 
@@ -228,7 +201,17 @@ section.content, section {
 	}
 }
 
-
+iframe#wufooFormzyecgec0vkygl2 {
+	#container {
+		#form1 {
+			header#header {
+				h2 {
+					visibility: hidden;
+				}
+			}
+		}
+	}
+}
 
 //FOOTER STYLES
 footer {
